# novelflow

./: .gitignore  App.tsx  README.ja.md  README.ko.md  README.md  README.zh-CN.md  i18n.tsx  index.css  index.html  index.tsx  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
components/: ChatPanel.tsx  Dashboard.tsx  Editor.tsx  NewProjectModal.tsx  Storyboard.tsx
services/: aiService.ts
src/: index.css
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
